project("algorithm")
set(BUILD_SHARED_LIBS ON)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_INCLUDE}/bin)

file(GLOB_RECURSE files src/*.cpp include/*.h include/*.hpp )

include_directories(include ${PROJECT_SOURCE_DIR}/include)

add_library(${PROJECT_NAME} SHARED ${files})

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)

INSTALL(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${PROJECT_INCLUDE}/bin)

add_definitions(-DALGORITHM_LIBRARY)